syntax = "proto3";

package campaign.v1;

import "media/v1/media.proto";
import "common/v1/metadata.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/nmxmxh/master-ovasabi/api/protos/campaign";

message Campaign {
  int32 id = 1;
  string slug = 2;
  string title = 3;
  string description = 4;
  string ranking_formula = 5;
  google.protobuf.Timestamp start_date = 6;
  google.protobuf.Timestamp end_date = 7;
  string status = 8;
  common.Metadata metadata = 9; // Robust, extensible metadata
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  string master_uuid = 12; // Global UUID reference to master table
  int64 master_id = 13; // Internal integer ID reference to master table
  string owner_id = 14; // User ID of the campaign owner
}

message CreateCampaignRequest {
  string slug = 1;
  string title = 2;
  string description = 3;
  string ranking_formula = 4;
  google.protobuf.Timestamp start_date = 5;
  google.protobuf.Timestamp end_date = 6;
  common.Metadata metadata = 7;
  string owner_id = 8; // User ID of the campaign owner
}

message CreateCampaignResponse {
  Campaign campaign = 1;
}

message GetCampaignRequest {
  string slug = 1;
}

message GetCampaignResponse {
  Campaign campaign = 1;
}

message UpdateCampaignRequest {
  Campaign campaign = 1;
}

message UpdateCampaignResponse {
  Campaign campaign = 1;
}

message DeleteCampaignRequest {
  int32 id = 1;
  string slug = 2;
}

message DeleteCampaignResponse {
  bool success = 1;
}

message ListCampaignsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListCampaignsResponse {
  repeated Campaign campaigns = 1;
}

// Broadcast event for campaign state updates, audit, and recovery


// If campaign_id is empty, default to 'ovasabi_website' for global events
message Broadcast {
  string campaign_id = 1; // Defaults to 'ovasabi_website' if not provided
  string timestamp = 2;
  string event_type = 3;
  string user_id = 4;
  common.Metadata metadata = 5;

  oneof payload {
    string json_payload = 6;
    bytes binary_payload = 7;
  }

  repeated media.v1.Media media = 8;
}

service CampaignService {
  rpc CreateCampaign(CreateCampaignRequest) returns (CreateCampaignResponse);
  rpc GetCampaign(GetCampaignRequest) returns (GetCampaignResponse);
  rpc UpdateCampaign(UpdateCampaignRequest) returns (UpdateCampaignResponse);
  rpc DeleteCampaign(DeleteCampaignRequest) returns (DeleteCampaignResponse);
  rpc ListCampaigns(ListCampaignsRequest) returns (ListCampaignsResponse);
} 